# ccev

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
.reasonix/truncated-results/: 1782630283867-664b389e-wait_for_job.txt
docs/: api-reference.md  getting-started.md  tls.md
examples/: CMakeLists.txt  echo_server.c  example_raw.c  example_readline.c  example_readnum.c  http1_bench.c  http_bench.c  timer_demo.c
scripts/: init-deps.cmd  init-deps.ps1  init-deps.sh
src/: ccev.c  ccev.h  ccev_conn.c  ccev_dns.c  ccev_icmp.c  ccev_internal.h  ccev_mem.c  ccev_poll.c  ccev_poll.h  ccev_signal.c  ccev_sock.c  ccev_stream.c  ccev_timer.c  ccev_tls.c  ccev_tls.h  ccev_tls_ctx.c  ccev_tls_internal.h
tests/: CMakeLists.txt  test_conn.c  test_dns.c  test_icmp.c  test_oom.c  test_signal.c  test_sock.c  test_stream.c  test_timer.c  test_tls.c
